# dbrest

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.bench-postgrest.yml  docker-compose.bench.yml
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
benches/: README.md  bench_metrics.rs  integration_benchmarks.rs  load_tester.rs  micro_benchmarks.rs
benches/fixtures/: seed_data.sql
benches/load_test/: scenarios.rs
config/: bench.toml
crates/dbrest-core/: Cargo.toml
crates/dbrest-core/src/: lib.rs  routing.rs  test_helpers.rs
crates/dbrest-core/src/api_request/: mod.rs  payload.rs  preferences.rs  range.rs  types.rs
crates/dbrest-core/src/app/: admin.rs  builder.rs  handlers.rs  metrics.rs  mod.rs  router.rs  server.rs  state.rs  streaming.rs
crates/dbrest-core/src/auth/: error.rs  jwt.rs  middleware.rs  mod.rs
crates/dbrest-core/src/backend/: mod.rs
crates/dbrest-core/src/config/: jwt.rs  mod.rs  parser.rs  types.rs
crates/dbrest-core/src/error/: mod.rs  response.rs
crates/dbrest-core/src/openapi/: mod.rs  types.rs
crates/dbrest-core/src/plan/: call_plan.rs  mod.rs  mutate_plan.rs  negotiate.rs  read_plan.rs  types.rs
crates/dbrest-core/src/query/: builder.rs  fragment.rs  mod.rs  pre_query.rs  sql_builder.rs  statements.rs
crates/dbrest-core/src/schema_cache/: db.rs  mod.rs  relationship.rs  representations.rs  routine.rs
crates/dbrest-core/src/schema_cache/queries/: computed_fields.rs  relationships.rs
crates/dbrest-core/src/types/: identifiers.rs  media.rs  mod.rs
crates/dbrest-postgres/: Cargo.toml
crates/dbrest-postgres/src/: dialect.rs  executor.rs  introspector.rs  lib.rs
crates/dbrest-sqlite/: Cargo.toml
crates/dbrest-sqlite/src/: dialect.rs  executor.rs  introspector.rs  lib.rs
docs/: book.toml
docs/book/: 404.html  advanced.html  api-reference.html  configuration.html  deployment.html  getting-started.html  observability.html  print.html  searcher-c2a407aa.js  searchindex-7e6e4608.js  toc-f624db4e.js  toc.html
docs/book/how-tos/: authentication.html  cors.html  csv-responses.html  prefer-headers.html  streaming.html  transaction-isolation.html
docs/src/: SUMMARY.md  advanced.md  api-reference.md  configuration.md  deployment.md  getting-started.md  observability.md
docs/src/how-tos/: authentication.md  cors.md  csv-responses.md  prefer-headers.md  streaming.md  transaction-isolation.md
loadtest/: bulk_insert.json  scenarios.rs
scripts/: benchmark-compare.sh
src/: lib.rs  main.rs  test_helpers.rs
src/api_request/: mod.rs  payload.rs  preferences.rs  query_params.rs  types.rs
src/app/: admin.rs  handlers.rs  listener.rs  mod.rs  router.rs  server.rs  state.rs  streaming.rs
src/auth/: cache.rs  error.rs  jwt.rs  middleware.rs  mod.rs  types.rs
src/backend/: mod.rs
src/backend/postgres/: dialect.rs  executor.rs  mod.rs
src/config/: error.rs  mod.rs  parser.rs
src/error/: codes.rs  mod.rs  response.rs
src/openapi/: generator.rs  types.rs
src/plan/: call_plan.rs  mod.rs  negotiate.rs  types.rs
src/query/: builder.rs  fragment.rs  mod.rs  pre_query.rs  sql_builder.rs  statements.rs
src/schema_cache/: db.rs  media_handler.rs  mod.rs  relationship.rs  representations.rs  routine.rs  table.rs
src/schema_cache/queries/: mod.rs  routines.rs  tables.rs
src/types/: identifiers.rs  media.rs
tests/: api_request_integration.rs  auth_integration.rs  e2e_app.rs  e2e_sqlite.rs  plan_integration.rs  query_integration.rs  schema_cache_integration.rs
tests/common/: mod.rs
tests/fixtures/: schema.sql  schema_sqlite.sql
