[package]
name = "dbrest-postgres"
version = "0.8.1"
edition = "2024"
rust-version = "1.91"
description = "PostgreSQL backend for the dbrest REST API"
license = "Apache-2.0"
repository = "https://github.com/zvectorlabs/dbrest"
keywords = ["rest", "api", "database", "postgres"]
categories = ["web-programming::http-server", "database"]

[dependencies]
dbrest-core = { path = "../dbrest-core", version = "0.8.1" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "macros"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization (for introspector ColumnJson)
serde_json = "1"

# Logging
tracing = "0.1"
