[package]
name = "dbrest-sqlite"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "SQLite backend for the dbrest REST API"
license = "MIT"

[dependencies]
dbrest-core = { path = "../dbrest-core" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde_json = "1"

# Logging
tracing = "0.1"
