[package]
name = "dbrest-sqlite"
version = "0.9.0"
edition = "2024"
rust-version = "1.91"
description = "SQLite backend for the dbrest REST API"
license = "Apache-2.0"
repository = "https://github.com/zvectorlabs/dbrest"
keywords = ["rest", "api", "database", "sqlite"]
categories = ["web-programming::http-server", "database"]

[dependencies]
dbrest-core = { path = "../dbrest-core", version = "0.9.0" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde_json = "1"

# Logging
tracing = "0.1"
